<resources>
    <string name="app_name">Расписание ВятГУ</string>
    <string name="SaveButton">Войти</string>
    <string name="Greetings">Авторизация</string>
    <string name="toolTip">Выполни вход, используя логин и пароль от личного кабинета!</string>
    <string name="Login">Логин</string>
    <string name="Password">Пароль</string>
    <string name="Settings">\t\tНастройки</string>
    <string name="Timetable">Расписание</string>
    <string name="lastUpdateText">Обновлено:</string>
    <string name="dateTextView">День недели XX.XX.XXXX</string>
    <string name="classNumberTextView">Пара X: XX:XX-XX:XX</string>
    <string name="classInfoTextView">..., \nПреподаватель ...</string>
    <string name="classroomTextView">XX-XXX</string>
    <string name="edit_group">Изменить группу</string>
    <string name="logout">Выйти из акккаунта</string>
    <string name="edit_group_text">\t\tРедактировать учебную группу</string>
    <string name="group">\tУчебная группа</string>
    <string name="group_nospacing">Учебная группа</string>
    <string name="close">Закрыть</string>
    <string name="save_group">Сохранить</string>
    <string name="changeTheme">Сменить тему</string>
    <string name="hideClassAfterItEnds">Убирать пары сразу после их окончания</string>
    <string name="settings">Настройки</string>
    <string name="socials">Контакты</string>
    <string name="noDataText">Информации о расписании нет</string>
</resources>