<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center|left"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/classNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="4dp"
                android:text="@string/classNumberTextView"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/classInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/classInfoTextView"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/divider" />


        <TextView
            android:id="@+id/classroomInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/classroomTextView"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>