<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="400dp"
    android:layout_height="220dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:id="@+id/editGroupWindow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="220dp"
            android:layout_centerInParent="true"
            android:background="@drawable/item_border"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center|start"
                android:text="@string/edit_group_text"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/studyGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/group_nospacing"
                android:textColorHint="?attr/hintTextColor"
                app:boxStrokeColor="@color/brightBlue"
                app:cursorColor="@color/brightBlue"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="Формат: ПОДб-11/ПОДб-1101/ПОДб-1101-53-00"
                app:helperTextEnabled="true"
                app:helperTextTextColor="?attr/hintTextColor"
                app:hintTextColor="?attr/hintTextColor"
                app:startIconTint="@color/brightBlue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/closeEditGroup"
                    android:layout_width="140dp"
                    android:layout_height="42dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:onClick="closeEditGroup"
                    android:text="@string/close"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/confirmGroup"
                    android:layout_width="140dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:onClick="saveGroup"
                    android:text="@string/save_group"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>