<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authorizationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brightBG"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/FadeBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fade_bg" >

        <RelativeLayout
            android:layout_width="340dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border"
            android:elevation="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/Greetings"
                android:textColor="@color/darkBlue"
                android:textSize="36sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LoginField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="110dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/Login"
                android:textColorHint="@color/brightText"
                app:boxStrokeColor="@color/darkBlue"
                app:cursorColor="@color/darkBlue"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:helperText="Формат: studXXXXXX или usrXXXXXX"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/brightText"
                app:hintTextColor="@color/darkBlue"
                app:startIconTint="@color/darkBlue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LoginField"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"

                android:fontFamily="@font/montserrat_bold"
                android:hint="@string/Password"
                android:textColorHint="@color/brightText"
                app:boxStrokeColor="@color/darkBlue"
                app:cursorColor="@color/darkBlue"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:hintTextColor="@color/darkBlue"
                app:startIconContentDescription="@string/Password"
                app:startIconTint="@color/darkBlue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                android:id="@+id/LoginButton"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_below="@+id/PasswordField"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/fade_button"
                android:fontFamily="@font/montserrat_bold"
                android:onClick="loginPressed"
                android:text="@string/SaveButton"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                app:finalCornerAngle="40dp"
                app:initialCornerAngle="40dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="8dp"
                app:spinning_bar_width="6dp" />

        </RelativeLayout>

    </RelativeLayout>

    <View
        android:id="@+id/animate_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/darkBlue"
        android:visibility="gone" />

</RelativeLayout>